--- a/package.json
+++ b/package.json
@@ -2,25 +2,55 @@
   "name": "next-js-starter",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
+    "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts",
+    "db:studio":"pnpm drizzle-kit studio --port=5050"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.65.1",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "better-auth": "^1.1.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
+    "drizzle-orm": "^0.39.1",
+    "drizzle-seed": "^0.3.1",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "hono": "^4.6.19",
+    "lucide-react": "^0.474.0",
+    "next": "14.2.22",
+    "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.22"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^8",
-    "eslint-config-next": "14.2.22"
+    "eslint-config-next": "14.2.22",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-check-file": "^2.8.0",
+    "eslint-plugin-n": "^17.15.1",
+    "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5"
   }
 }
