--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 DATABASE_URL=
-BETTER_AUTH_URL=http://localhost:3000
+NEXT_PUBLIC_URL=http://localhost:3000
 BETTER_AUTH_SECRET=GowkM1JniRE5cuz4LU4SOMrXnrmEOo2z
 
 Google_Client_ID=
