--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "next-js-starter",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "engines": {
+    "node": ">=20.0.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
     "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts",
     "db:studio": "pnpm drizzle-kit studio --port=5050"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^0.18.3",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@scalar/hono-api-reference": "^0.5.169",
     "@tanstack/react-query": "^5.65.1",
     "better-auth": "^1.1.15",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +38,8 @@
     "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
+    "stoker": "^1.4.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
@@ -47,6 +58,7 @@
     "eslint-plugin-check-file": "^2.8.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
