build: added prettier setup + tailwindcss plugin + sort imports plugin

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,9 +5,20 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "importOrder": [
-    "^(react|next?/?([a-zA-Z/]*))$",
+    "^(react/(.*)$)|^(react$)",
+    "^(next/(.*)$)|^(next$)",
     "<THIRD_PARTY_MODULES>",
-    "^@/(.*)$",
+    "",
+    "^types$",
+    "^@/types/(.*)$",
+    "^@/config/(.*)$",
+    "^@/lib/(.*)$",
+    "^@/hooks/(.*)$",
+    "^@/components/ui/(.*)$",
+    "^@/components/(.*)$",
+    "^@/styles/(.*)$",
+    "^@/app/(.*)$",
+    "",
     "^[./]"
   ],
   "importOrderSeparation": true,
