--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.x"
+    "node": ">=20.0.x",
+    "pnpm": ">=9.0.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -16,7 +17,8 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
     "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts",
-    "db:studio": "pnpm drizzle-kit studio --port=5050"
+    "db:studio": "pnpm drizzle-kit studio --port=5050",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hono/zod-openapi": "^0.18.3",
@@ -45,6 +47,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -59,6 +63,8 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
