--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "source.fixAll": "always",
     "source.organizeImports": "always"
   },
+  "editor.formatOnSaveMode": "file",
   "files.associations": {
     "*.css": "tailwindcss"
   },
