--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_ENV=development
-DATABASE_URL=
+DATABASE_URL=postgres://postgres:password@localhost:5432/your-project-name
 NEXT_PUBLIC_URL=http://localhost:3000
 BETTER_AUTH_SECRET=GowkM1JniRE5cuz4LU4SOMrXnrmEOo2z
 
 Google_Client_ID=
 Google_Client_Secret=
+
