feat(features/todo): todo feature api

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DATABASE_URL=postgres://postgres:password@localhost:5432/your-project-name
+DATABASE_URL=postgres://postgres:secretpass@localhost:5432/todo
 NEXT_PUBLIC_URL=http://localhost:3000
 BETTER_AUTH_SECRET=GowkM1JniRE5cuz4LU4SOMrXnrmEOo2z
 
