--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,10 @@
     "plugin:drizzle/recommended",
     "plugin:tailwindcss/recommended"
   ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
+  // "parser": "@typescript-eslint/parser",
+  // "parserOptions": {
+  //   "project": "./tsconfig.json"
+  // },
   "plugins": ["check-file", "n", "drizzle"],
   "ignorePatterns": ["node_modules/", ".next/", "out/", "**/migrations/*"],
   "rules": {
