--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next-js-starter",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "engines": {
     "node": ">=20.0.x",
     "pnpm": ">=9.0.x"
@@ -14,7 +15,7 @@
     "lint:fix": "next lint --fix",
     "format": "prettier src/ --write",
     "format:check": "prettier --check .",
-    "db:generate": "drizzle-kit generate:pg",
+    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
     "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts",
     "db:studio": "pnpm drizzle-kit studio --port=5050",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@hono/zod-openapi": "^0.18.3",
     "@hookform/resolvers": "^3.10.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@scalar/hono-api-reference": "^0.5.169",
@@ -30,10 +32,12 @@
     "better-auth": "^1.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.39.1",
     "drizzle-seed": "^0.3.1",
+    "drizzle-zod": "^0.7.0",
     "hono": "^4.6.19",
     "lucide-react": "^0.474.0",
     "next": "14.2.22",
