--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "hono": "^4.6.19",
     "lucide-react": "^0.474.0",
     "next": "14.2.22",
+    "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
