--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@scalar/hono-api-reference": "^0.5.169",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.65.1",
     "better-auth": "^1.1.15",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +46,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "sonner": "^1.7.4",
     "stoker": "^1.4.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
