--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@scalar/hono-api-reference": "^0.5.169",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.65.1",
     "better-auth": "^1.1.15",
     "class-variance-authority": "^0.7.1",
