--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "drizzle-seed": "^0.3.1",
     "hono": "^4.6.19",
     "lucide-react": "^0.474.0",
-    "next": "14.2.22",
+    "next": "14.2.25",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
     "react": "^18",
@@ -72,5 +72,6 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52"
 }
