fix: update Next.js and related dependencies to version 14.2.25

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,6 @@
   "typescript.preferences.autoImportSpecifierExcludeRegexes": [
     "@radix-ui",
     "next/router",
-    "next/dist",
-    "^lucide-react/dist/lucide-react.suffixed$"
+    "next/dist"
   ]
 }
