--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hono": "^4.6.19",
     "lucide-react": "^0.474.0",
     "next": "14.2.25",
+    "next": "14.2.25",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.5",
     "react": "^18",
