refactor: implement code changes to enhance functionality and improve performance

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@hono/zod-openapi": "^0.18.3",
     "@hookform/resolvers": "^3.10.0",
+    "@orpc/client": "^1.5.1",
+    "@orpc/server": "^1.5.1",
+    "@orpc/tanstack-query": "^1.5.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
-    "@scalar/hono-api-reference": "^0.5.169",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.65.1",
     "better-auth": "^1.1.15",
@@ -35,14 +36,14 @@
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.39.1",
     "drizzle-seed": "^0.3.1",
-    "hono": "^4.6.19",
     "lucide-react": "^0.474.0",
     "next": "14.2.25",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.5",
     "stoker": "^1.4.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
+    "@tanstack/react-query-devtools": "^5.80.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -77,7 +79,8 @@
   "packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52",
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "unrs-resolver"
     ]
   }
 }
