--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "lint:fix": "next lint --fix",
     "format": "prettier src/ --write",
     "format:check": "prettier --check .",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts",
-    "db:studio": "pnpm drizzle-kit studio --port=5050",
+    "db:studio": "drizzle-kit studio --port=5050",
     "prepare": "husky"
   },
   "dependencies": {
@@ -27,6 +27,7 @@
     "@orpc/tanstack-query": "^1.5.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.65.1",
     "better-auth": "^1.1.15",
@@ -59,6 +60,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
+    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.30.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.22",
